--- a/style.css
+++ b/style.css
@@ -413,13 +413,16 @@ background-color: var(--sec-azure);
 }
 
 .hero h1 {
-    font-size: clamp(3rem, 8vw, 6rem);
+    font-size: clamp(1.2rem, 6vw, 4rem);
     font-weight: 800;
     margin-bottom: 1rem;
     opacity: 0;
     animation: slideInUp 4s ease 0.5s forwards infinite;
    color: var(--primary-white);
    font-style:italic;
+}
+.hero h3{
+    font-size: clamp(1rem, 3vw, 2rem) ;
 }
 
 .hero p {
@@ -431,7 +434,10 @@ background-color: var(--sec-azure);
      font-weight: 500;
      font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
+.heighlights{
+    background-color: rgb(250, 252, 249);
+    color: #347e92;
+}
 .cta-buttons {
     display: flex;
     gap: 1rem;
